--- a/AppBlog/templates/AppBlog/perfil_usuario.html
+++ b/AppBlog/templates/AppBlog/perfil_usuario.html
@@ -7,9 +7,9 @@
     <div class="container d-flex align-items-center flex-column">
         <!-- Masthead Avatar Image-->
         <h1></h1>
-        <img class="masthead-avatar" height="300px" style="border-radius: 50%" src="{{avatar_url}}" alt="" />
+        <img class="masthead-avatar" height="300px" style="border-radius: 50%" src="{{user_avatar_url}}" alt="" />
         <!-- Masthead Heading-->
-        <h1 class="masthead-heading text-uppercase mb-0">{{user.username}}</h1>
+        <h1 class="masthead-heading text-uppercase mb-0">{{usuario.username}}</h1>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
